--- a/.github/workflows/update_news.yml
+++ b/.github/workflows/update_news.yml
@@ -1,39 +1,44 @@
-name: Update News Feed
+name: QuickBrief Pro Auto-Update
 
 on:
   schedule:
-    - cron: '0 */2 * * *' # Rulează automat la fiecare 2 ore
-  workflow_dispatch:      # Ne permite să-l pornim noi manual oricând
+    # Rulează la fiecare 15 minute (0, 15, 30, 45)
+    - cron: '*/15 * * * *'
+  workflow_dispatch: # Permite declanșarea manuală din tab-ul Actions
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    # Oferă robotului permisiunea de a scrie modificările în fișierul JSON
     permissions:
-      contents: write     # Permite robotului să modifice news_data.json
+      contents: write
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository code
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Install required libraries
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run news scraper
+    - name: Run News Scraper & AI Summarizer
       env:
+        # Trage cheia din GitHub Secrets
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: python main.py
 
-    - name: Commit and push changes
+    - name: Save changes to GitHub
       run: |
-        git config --global user.name 'NewsBot'
-        git config --global user.email 'bot@quickbrief.ai'
+        git config --global user.name 'QuickBrief-Bot'
+        git config --global user.email 'bot@quickbrief.pro'
         git add news_data.json
-        git commit -m "Auto-update: New AI Summaries" || exit 0
+        # Commit doar dacă există schimbări (știri noi), altfel nu dă eroare
+        git commit -m "Automated Update: Global Business Intelligence" || exit 0
         git push
