--- a/.github/workflows/update_news.yml
+++ b/.github/workflows/update_news.yml
@@ -2,9 +2,9 @@ name: Briefly Intelligence Sync
 
 on:
   schedule:
-    # Rulează la fiecare 15 minute
+    # Rulează la fiecare 15 minute pentru a menține site-ul LIVE
     - cron: '*/15 * * * *'
-  workflow_dispatch:
+  workflow_dispatch: # Permite rularea manuală din butonul "Run workflow"
 
 jobs:
   update_and_post:
@@ -27,8 +27,8 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python main.py
 
-      - name: Run Social Poster (Every 4 Hours Only)
-        # Verifică dacă ora UTC este 0, 4, 8, 12, 16, 20
+      - name: Run Social Poster (Every 4 Hours)
+        # Verifică dacă ora UTC este 0, 4, 8, 12, 16 sau 20
         if: contains(fromJSON('["00", "04", "08", "12", "16", "20"]'), github.event.schedule && formatDateTime(github.event.scheduled_time, 'HH') || '00')
         run: python social_poster.py
 
@@ -36,6 +36,7 @@ jobs:
         run: |
           git config --global user.name "BrieflyBot"
           git config --global user.email "bot@briefly.life"
+          # Adăugăm fișierul de memorie și pozele noi
           git add news_data.json daily_summaries.json posted_ids.txt last_news_post.jpg posts/
-          git commit -m "Auto-update: Intelligence data and social media assets" || exit 0
+          git commit -m "Auto-update: 24H Intelligence & Social Assets" || exit 0
           git push
