--- a/.github/workflows/briefly_sync.yml
+++ b/.github/workflows/briefly_sync.yml
@@ -4,7 +4,11 @@ on:
   schedule:
     # Rulează la fiecare 15 minute pentru a menține site-ul LIVE
     - cron: '*/15 * * * *'
-  workflow_dispatch: # Permite rularea manuală din butonul "Run workflow"
+  workflow_dispatch: # Permite rularea manuală
+
+# VITAL: Îi dăm voie robotului să modifice fișierele (git push)
+permissions:
+  contents: write
 
 jobs:
   update_and_post:
@@ -19,11 +23,9 @@ jobs:
           python-version: '3.9'
 
       - name: Install System Fonts (Pillow Fix)
-        # Instalăm fonturile DejaVu pentru a garanta calitatea imaginilor generate
         run: sudo apt-get update && sudo apt-get install -y fonts-dejavu-core
 
       - name: Install Dependencies
-        # Dacă ai configurat requirements.txt, poți înlocui asta cu: pip install -r requirements.txt
         run: pip install feedparser newspaper3k openai Pillow
 
       - name: Run Scraper (Always)
@@ -31,18 +33,29 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python main.py
 
-      - name: Run Social Poster (Every 4 Hours)
-        # Verifică dacă ora UTC este 0, 4, 8, 12, 16 sau 20
-        if: contains(fromJSON('["00", "04", "08", "12", "16", "20"]'), github.event.schedule && formatDateTime(github.event.scheduled_time, 'HH') || '00')
-        run: python social_poster.py
+      - name: Run Social Poster (Every 4 Hours or Manual)
+        run: |
+          # Preluăm ora curentă în format UTC (00-23)
+          CURRENT_HOUR=$(date -u +"%H")
+          
+          # Rulăm dacă acțiunea e manuală SAU dacă este una dintre orele vizate
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$CURRENT_HOUR" =~ ^(00|04|08|12|16|20)$ ]]; then
+            echo "Executăm social_poster.py (Ora UTC: $CURRENT_HOUR)"
+            python social_poster.py
+          else
+            echo "Sărim peste generarea de imagini sociale. (Ora UTC: $CURRENT_HOUR)"
+          fi
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "BrieflyBot"
           git config --global user.email "bot@briefly.life"
-          # Am eliminat folderul posts/ care nu există în structura ta
-          git add news_data.json daily_summaries.json posted_ids.txt last_news_post.jpg
+          
+          # "|| true" previne eroarea dacă unul din fișiere nu a fost creat încă
+          git add news_data.json daily_summaries.json posted_ids.txt last_news_post.jpg || true
+          
           git commit -m "Auto-update: 24H Intelligence & Social Assets" || exit 0
-          # Prevenim erorile de tip "Updates were rejected because the remote contains work that you do not have locally"
+          
+          # Ne asigurăm că suntem sincronizați înainte de push
           git pull --rebase origin main
           git push
