--- a/.github/workflows/briefly_sync.yml
+++ b/.github/workflows/briefly_sync.yml
@@ -2,9 +2,11 @@ name: Briefly Intelligence Sync
 
 on:
   schedule:
+    # Rulează la fiecare 15 minute pentru a menține site-ul LIVE
     - cron: '*/15 * * * *'
-  workflow_dispatch:
+  workflow_dispatch: # Permite rularea manuală
 
+# VITAL: Îi dăm voie robotului să modifice fișierele (git push)
 permissions:
   contents: write
 
@@ -18,13 +20,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          # AICI ESTE MODIFICAREA: Am trecut de la 3.9 la 3.10
+          # Python 3.10 este necesar pentru instagrapi
           python-version: '3.10'
 
       - name: Install System Fonts (Pillow Fix)
         run: sudo apt-get update && sudo apt-get install -y fonts-dejavu-core
 
       - name: Install Dependencies
+        # Include absolut toate librăriile necesare, inclusiv lxml_html_clean și instagrapi
         run: pip install feedparser newspaper3k openai Pillow lxml_html_clean instagrapi nltk && python -m nltk.downloader punkt punkt_tab
 
       - name: Run Scraper (Always)
@@ -34,11 +37,13 @@ jobs:
 
       - name: Run Social Poster & Instagram Post (Every 4 Hours or Manual)
         env:
-          IG_USERNAME: ${{ secrets.IG_USERNAME }}
-          IG_PASSWORD: ${{ secrets.IG_PASSWORD }}
+          # Folosim noul secret pentru logarea sigură cu Session ID
+          IG_SESSIONID: ${{ secrets.IG_SESSIONID }}
         run: |
+          # Preluăm ora curentă în format UTC (00-23)
           CURRENT_HOUR=$(date -u +"%H")
           
+          # Rulăm dacă acțiunea e manuală SAU dacă este una dintre orele vizate
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$CURRENT_HOUR" =~ ^(00|04|08|12|16|20)$ ]]; then
             echo "1. Executăm social_poster.py (generare imagine)..."
             python social_poster.py
@@ -54,7 +59,11 @@ jobs:
           git config --global user.name "BrieflyBot"
           git config --global user.email "bot@briefly.life"
           
+          # "|| true" previne eroarea dacă unul din fișiere nu a fost creat încă
           git add news_data.json daily_summaries.json posted_ids.txt last_news_post.jpg || true
+          
           git commit -m "Auto-update: 24H Intelligence & Social Assets" || exit 0
+          
+          # Ne asigurăm că suntem sincronizați înainte de push
           git pull --rebase origin main
           git push
