--- a/.github/workflows/briefly_sync.yml
+++ b/.github/workflows/briefly_sync.yml
@@ -2,8 +2,8 @@ name: Briefly Intelligence Sync
 
 on:
   schedule:
-    - cron: '*/15 * * * *'
-  workflow_dispatch:
+    - cron: '*/15 * * * *' # Rulează scraper-ul la fiecare 15 minute
+  workflow_dispatch: # Permite rularea manuală din interfața GitHub
 
 permissions:
   contents: write
@@ -24,19 +24,21 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y fonts-dejavu-core
 
       - name: Install Dependencies
-        # Am adăugat librăria "requests" necesară noului script
-        run: pip install feedparser newspaper3k openai Pillow lxml_html_clean nltk requests && python -m nltk.downloader punkt punkt_tab
+        run: |
+          pip install feedparser newspaper3k openai Pillow lxml_html_clean nltk requests
+          python -m nltk.downloader punkt punkt_tab
 
-      - name: Run Scraper (Always)
+      - name: Run Scraper (Main Engine)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python main.py
 
-      - name: Run Social Poster (Image Gen)
+      - name: Generate Social Assets (Pillow)
         run: |
           CURRENT_HOUR=$(date -u +"%H")
+          # Generăm imaginea doar la orele stabilite (00, 04, 08, 12, 16, 20) sau la declanșare manuală
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$CURRENT_HOUR" =~ ^(00|04|08|12|16|20)$ ]]; then
-            echo "Executăm social_poster.py (generare imagine)..."
+            echo "Executăm social_poster.py pentru generare vizual..."
             python social_poster.py
           fi
 
@@ -45,19 +47,21 @@ jobs:
           git config --global user.name "BrieflyBot"
           git config --global user.email "bot@briefly.life"
           
+          # Adăugăm fișierele de date și ultima imagine generată
           git add news_data.json daily_summaries.json posted_ids.txt last_news_post.jpg || true
           git commit -m "Auto-update: 24H Intelligence & Social Assets" || exit 0
           git pull --rebase origin main
           git push
 
-      - name: Post to Instagram via Webhook (After Push)
+      - name: Broadcast to Multi-Platform (Discord, Telegram, X)
         env:
-          MAKE_WEBHOOK_URL: ${{ secrets.MAKE_WEBHOOK_URL }}
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
         run: |
           CURRENT_HOUR=$(date -u +"%H")
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$CURRENT_HOUR" =~ ^(00|04|08|12|16|20)$ ]]; then
-            # Preluăm ID-ul noului cod încărcat pe GitHub
-            export COMMIT_HASH=$(git rev-parse HEAD)
-            echo "Trimitem datele către Make.com (Hash: $COMMIT_HASH)..."
-            python instagram_poster.py
+            echo "Pornim broadcast_intelligence.py..."
+            python broadcast_intelligence.py
           fi
