--- a/.github/workflows/briefly_sync.yml
+++ b/.github/workflows/briefly_sync.yml
@@ -2,8 +2,8 @@ name: Briefly Intelligence Sync
 
 on:
   schedule:
-    - cron: '*/15 * * * *' # Rulează scraper-ul la fiecare 15 minute
-  workflow_dispatch: # Permite rularea manuală din interfața GitHub
+    - cron: '*/15 * * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -20,12 +20,11 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install System Fonts (Pillow Fix)
-        run: sudo apt-get update && sudo apt-get install -y fonts-dejavu-core
-
       - name: Install Dependencies
         run: |
-          pip install feedparser newspaper3k openai Pillow lxml_html_clean nltk requests
+          sudo apt-get update && sudo apt-get install -y fonts-dejavu-core
+          # AM ADAUGAT requests-oauthlib MAI JOS:
+          pip install feedparser newspaper3k openai Pillow lxml_html_clean nltk requests requests-oauthlib
           python -m nltk.downloader punkt punkt_tab
 
       - name: Run Scraper (Main Engine)
@@ -36,9 +35,7 @@ jobs:
       - name: Generate Social Assets (Pillow)
         run: |
           CURRENT_HOUR=$(date -u +"%H")
-          # Generăm imaginea doar la orele stabilite (00, 04, 08, 12, 16, 20) sau la declanșare manuală
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$CURRENT_HOUR" =~ ^(00|04|08|12|16|20)$ ]]; then
-            echo "Executăm social_poster.py pentru generare vizual..."
             python social_poster.py
           fi
 
@@ -47,21 +44,23 @@ jobs:
           git config --global user.name "BrieflyBot"
           git config --global user.email "bot@briefly.life"
           
-          # Adăugăm fișierele de date și ultima imagine generată
           git add news_data.json daily_summaries.json posted_ids.txt last_news_post.jpg || true
           git commit -m "Auto-update: 24H Intelligence & Social Assets" || exit 0
           git pull --rebase origin main
           git push
 
-      - name: Broadcast to Multi-Platform (Discord, Telegram, X)
+      - name: Broadcast to Multi-Platform
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+          # CELE 4 SECRETE PENTRU X
+          TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+          TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
+          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
           CURRENT_HOUR=$(date -u +"%H")
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$CURRENT_HOUR" =~ ^(00|04|08|12|16|20)$ ]]; then
-            echo "Pornim broadcast_intelligence.py..."
             python broadcast_intelligence.py
           fi
